--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,4 @@
 install:
   - echo "Building and publishing"
   - chmod +x ./gradlew
-  - ./gradlew publishToMavenLocal
+  - ./gradlew build publishToMavenLocal
