--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ kotlin.code.style=official
 projectGroup=dev.d1s
 projectVersion=1.0.8
 
-kotlinVersion=1.7.20
+moduleDocsPath=./docs/module.md
+
+kotlinVersion=1.7.10
 
 ktorVersion=2.1.0
