fix(ci): assigned jobs to deployment environment

--- a/.github/workflows/deploy-snapshot.yml
+++ b/.github/workflows/deploy-snapshot.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   deploy:
+    environment: deployment_environment
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
