--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    environment: deployment_environment
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
