--- a/.github/workflows/deploy-snapshot.yml
+++ b/.github/workflows/deploy-snapshot.yml
@@ -18,10 +18,14 @@ jobs:
 
           cache: 'gradle'
 
+      - name: Get commit hash
+        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
+
       - name: Deploy to maven.d1s.dev (snapshots)
         env:
           MAVEN_D1S_DEV_USERNAME: ${{ secrets.MAVEN_D1S_DEV_USERNAME }}
           MAVEN_D1S_DEV_PASSWORD: ${{ secrets.MAVEN_D1S_DEV_PASSWORD }}
+          GIT_SHORT_COMMIT_SHA: ${{ env.hash }}
         run: ./gradlew publishAllPublicationsToMavenD1sDevRepositorySnapshotsRepository
 
       - name: Upload artifacts
