--- a/.github/workflows/deploy-documentation.yml
+++ b/.github/workflows/deploy-documentation.yml
@@ -9,12 +9,19 @@ jobs:
   publishing:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v1
         with:
           java-version: 17
+          distribution: 'liberica'
+          cache: 'gradle'
+
       - name: Render Dokka documentation
         run: ./gradlew dokkaHtml
+
       - name: Publish Dokka Documentation
         uses: peaceiris/actions-gh-pages@v3
         with:
