--- a/.github/workflows/deploy-snapshot.yml
+++ b/.github/workflows/deploy-snapshot.yml
@@ -13,9 +13,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '17'
-
+          distribution: 'liberica'
           cache: 'gradle'
 
       - name: Get commit hash
