chore(ci): adjusted job names

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -6,7 +6,7 @@ on:
       - published
 
 jobs:
-  deploy:
+  deploy_release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
