--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 
 projectGroup=dev.d1s
-projectVersion=2.0.1
+projectVersion=2.0.1-dev
 
 moduleDocsPath=./docs/module.md
 
