chore: switch to dev

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 kotlin.code.style=official
 
 projectGroup=dev.d1s
-projectVersion=2.0.2
+projectVersion=2.0.2-dev
 
 moduleDocsPath=./docs/module.md
 
